REGRESSION (iOS 15, GPU Process): Fails to load texture map https://bugs.webkit.org/show_bug.cgi?id=231471 <rdar://problem/84328146>

Patch by Kimmo Kinnunen <kkinnunen@apple.com> on 2021-11-11
Reviewed by Tim Horton.

Source/WebCore:

Clear the CGImage copy from the IOSurface CGContext after the IOSurface has
been drawn to a bitmap CGContext. The CGImage stored in the IOSurface CGContext
contains a malloc buffer of the data. This buffer is counted against GPU
process memory consumption, causing GPU process jetsams.

* platform/graphics/cg/ImageBufferIOSurfaceBackend.cpp:
(WebCore::ImageBufferIOSurfaceBackend::draw):
* platform/graphics/cg/ImageBufferIOSurfaceBackend.h:

Source/WebKit:

Use the normal "draw image buffer" call to draw the image buffer
to the shareable bitmap. Before, it was manually re-implementing this
API call via the lower level calls.
The drawImageBuffer call now fixes up the IOSurface -backed source
ImageBuffers to not keep referencing to the CGImage that provided
the data to the draw. Otherwise GPU process jetsams as the CGImage
inside IOSurface is counted against GPU process memory limit.

* GPUProcess/graphics/RemoteRenderingBackend.cpp:
(WebKit::RemoteRenderingBackend::getShareableBitmapForImageBufferWithQualifiedIdentifier):

Tools:

Add a test that tries to assert that GraphicsContext::drawImageBuffer() does not increase
memory footprint of the process. However, leave the test disabled as currently
it seems that the WTF::memoryFootprint() measurement does not see all the
memory releases the CG does.

* TestWebKitAPI/Tests/WebCore/ImageBufferTests.cpp:
(TestWebKitAPI::memoryFootprintChangedBy):
(TestWebKitAPI::imageBufferPixelIs):
(TestWebKitAPI::TEST):

LayoutTests:

Add a test that sometimes jetsams on device.
Jetsam is not deterministic as it is only
triggerd during memory pressure.
macOS does not trigger jetsam due to platform
rules.

* fast/canvas/webgl/gl-teximage-imagebitmap-memory.html: Added.
* fast/canvas/webgl/resources/green-4000x4000.png: Added.


Canonical link: https://commits.webkit.org/244145@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285644 268f45cc-cd09-0410-ab3c-d52691b4dbfc