Tools/TestWebKitAPI/Tests/WebCore/ImageBufferTests.cpp
@@ -25,11 +25,36 @@
 
 #include "config.h"
 
+#include <WebCore/Color.h>
 #include <WebCore/ImageBuffer.h>
 #include <WebCore/PlatformImageBuffer.h>
+#include <cmath>
+#include <wtf/MemoryFootprint.h>
 
 namespace TestWebKitAPI {
 using namespace WebCore;
+
+static ::testing::AssertionResult memoryFootprintChangedBy(size_t& lastFootprint, double expectedChange, double error)
+{
+    WTF::releaseFastMallocFreeMemory();
+    size_t newFootprint = memoryFootprint();
+    size_t oldFootprint = std::exchange(lastFootprint, newFootprint);
+    double change = static_cast<double>(newFootprint) - oldFootprint;
+    if (change - expectedChange > error)
+        return ::testing::AssertionFailure() << "Footprint changed by " << change << ". Expected at most " << expectedChange << "+-" << error;
+    return ::testing::AssertionSuccess();
+}
+
+static ::testing::AssertionResult imageBufferPixelIs(Color expected, ImageBuffer& imageBuffer, int x, int y)
+{
+    PixelBufferFormat format { AlphaPremultiplication::Unpremultiplied, PixelFormat::RGBA8, DestinationColorSpace::SRGB() };
+    auto frontPixelBuffer = imageBuffer.getPixelBuffer(format, { x, y, 1, 1 });
+    auto& data = frontPixelBuffer->data();
+    auto got = Color { SRGBA<uint8_t> { data.item(0), data.item(1), data.item(2), data.item(3) } };
+    if (got != expected)
+        return ::testing::AssertionFailure() << "color is not expected."; // FIXME: implement Color <<.
+    return ::testing::AssertionSuccess();
+}
 
 // Tests that the specialized image buffer constructors construct the expected type of object.
 // Test passes if the test compiles, there was a bug where the code wouldn't compile.
@@ -79,26 +104,71 @@ TEST(ImageBufferTests, ImageBufferSubPixelDrawing)
         frontContext.drawImageBuffer(*backImageBuffer, WebCore::FloatPoint { }, { WebCore::CompositeOperator::Copy });
     }
 
-    auto checkGreenPixel = [&](ImageBuffer& imageBuffer, int x, int y) {
-        PixelBufferFormat format { AlphaPremultiplication::Unpremultiplied, PixelFormat::RGBA8, colorSpace };
-        auto frontPixelBuffer = imageBuffer.getPixelBuffer(format, { x, y, 1, 1 });
-        auto& data = frontPixelBuffer->data();
+    EXPECT_TRUE(imageBufferPixelIs(Color::green, *frontImageBuffer, fillRect.x() + 1, fillRect.y() + 1));
+    EXPECT_TRUE(imageBufferPixelIs(Color::green, *frontImageBuffer, fillRect.maxX() - 1, fillRect.y() + 1));
+    EXPECT_TRUE(imageBufferPixelIs(Color::green, *frontImageBuffer, fillRect.x() + 1, fillRect.maxY() - 1));
+    EXPECT_TRUE(imageBufferPixelIs(Color::green, *frontImageBuffer, fillRect.maxX() - 1, fillRect.maxY() - 1));
 
-        EXPECT_EQ(data.item(0), 0x00);
-        EXPECT_EQ(data.item(1), 0xff);
-        EXPECT_EQ(data.item(2), 0x00);
-        EXPECT_EQ(data.item(3), 0xff);
-    };
-
-    checkGreenPixel(*frontImageBuffer, fillRect.x()    + 1, fillRect.y()    + 1);
-    checkGreenPixel(*frontImageBuffer, fillRect.maxX() - 1, fillRect.y()    + 1);
-    checkGreenPixel(*frontImageBuffer, fillRect.x()    + 1, fillRect.maxY() - 1);
-    checkGreenPixel(*frontImageBuffer, fillRect.maxX() - 1, fillRect.maxY() - 1);
-
-    checkGreenPixel(*backImageBuffer, fillRect.x()    + 1, fillRect.y()    + 1);
-    checkGreenPixel(*backImageBuffer, fillRect.maxX() - 1, fillRect.y()    + 1);
-    checkGreenPixel(*backImageBuffer, fillRect.x()    + 1, fillRect.maxY() - 1);
-    checkGreenPixel(*backImageBuffer, fillRect.maxX() - 1, fillRect.maxY() - 1);
+    EXPECT_TRUE(imageBufferPixelIs(Color::green, *backImageBuffer, fillRect.x() + 1, fillRect.y() + 1));
+    EXPECT_TRUE(imageBufferPixelIs(Color::green, *backImageBuffer, fillRect.maxX() - 1, fillRect.y() + 1));
+    EXPECT_TRUE(imageBufferPixelIs(Color::green, *backImageBuffer, fillRect.x() + 1, fillRect.maxY() - 1));
+    EXPECT_TRUE(imageBufferPixelIs(Color::green, *backImageBuffer, fillRect.maxX() - 1, fillRect.maxY() - 1));
 }
 
+// Test that drawing an accelerated ImageBuffer to an unaccelerated does not store extra
+// memory to the accelerated ImageBuffer.
+// FIXME: The test is disabled as it appears that WTF::memoryFootprint() is not exact enough to
+// test that GraphicsContext::drawImageBitmap() does not keep extra memory around.
+// However, if the test is paused at the memory measurement location and the process is inspected
+// manually with the memory tools, the footprint is as expected, e.g. drawBitmapImage does not
+// persist additional memory.
+TEST(ImageBufferTests, DISABLED_DrawImageBufferDoesNotReferenceExtraMemory)
+{
+    auto colorSpace = DestinationColorSpace::SRGB();
+    auto pixelFormat = PixelFormat::BGRA8;
+    FloatSize logicalSize { 4096, 4096 };
+    float scale = 1;
+    size_t footprintError = 1024 * 1024;
+    size_t logicalSizeBytes = logicalSize.width() * logicalSize.height() * 4;
+    // FIXME: Logically this fuzz amount  should not exist.
+    // WTF::memoryFootprint() does not return the same amount of memory as
+    // the `footprint` command or the leak tools.
+    // At the time of writing, the bug case would report drawImageBitmap footprint
+    // as ~130mb, and fixed case would report ~67mb.
+    size_t drawImageBitmapUnaccountedFootprint = logicalSizeBytes + 3 * 1024 * 1024;
+
+    {
+        // Make potential accelerated drawing backend instantiate roughly the global structures needed for this test.
+        auto accelerated = ImageBuffer::create(logicalSize, RenderingMode::Accelerated, scale, colorSpace, pixelFormat, nullptr);
+        auto fillRect = FloatRect { { }, logicalSize };
+        accelerated->context().fillRect(fillRect, Color::green);
+        EXPECT_TRUE(imageBufferPixelIs(Color::green, *accelerated, fillRect.maxX() - 1, fillRect.maxY() - 1));
+    }
+    WTF::releaseFastMallocFreeMemory();
+    auto initialFootprint = memoryFootprint();
+    auto lastFootprint = initialFootprint;
+    EXPECT_GT(lastFootprint, 0u);
+
+    auto accelerated = ImageBuffer::create(logicalSize, RenderingMode::Accelerated, scale, colorSpace, pixelFormat, nullptr);
+    auto fillRect = FloatRect { { }, logicalSize };
+    accelerated->context().fillRect(fillRect, Color::green);
+    accelerated->flushContext();
+    EXPECT_TRUE(memoryFootprintChangedBy(lastFootprint, logicalSizeBytes, footprintError));
+
+    auto unaccelerated = ImageBuffer::create(logicalSize, RenderingMode::Unaccelerated, scale, colorSpace, pixelFormat, nullptr);
+    unaccelerated->context().fillRect(fillRect, Color::yellow);
+    EXPECT_TRUE(imageBufferPixelIs(Color::yellow, *unaccelerated, fillRect.maxX() - 1, fillRect.maxY() - 1));
+    EXPECT_TRUE(memoryFootprintChangedBy(lastFootprint, logicalSizeBytes, footprintError));
+
+    // The purpose of the whole test is to test that drawImageBuffer does not increase
+    // memory footprint.
+    unaccelerated->context().drawImageBuffer(*accelerated, FloatRect { { }, logicalSize }, FloatRect { { }, logicalSize }, { WebCore::CompositeOperator::Copy });
+    EXPECT_TRUE(imageBufferPixelIs(Color::green, *unaccelerated, fillRect.maxX() - 1, fillRect.maxY() - 1));
+    EXPECT_TRUE(memoryFootprintChangedBy(lastFootprint, 0 + drawImageBitmapUnaccountedFootprint, footprintError));
+    // sleep(10000); // Enable this to inspect the process manually.
+    accelerated = nullptr;
+    unaccelerated = nullptr;
+    lastFootprint = initialFootprint;
+    EXPECT_TRUE(memoryFootprintChangedBy(lastFootprint, 0, footprintError));
+}
 }
